--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,58 +1,67 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins";
+}
+:root {
+  --bg-color: rgba(255, 255, 255, 0.973);
+  --second-bg-color: #f5f5f5;
+  --text-color: rgb(0, 0, 0);
+  --main-color: rgb(11, 84, 147);
+}
+html {
+  font-size: 60%;
+  overflow-x: hidden;
+}
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
+  display: flex;
+}
 /*---Header---------------------------------------------------------------------*/
 
-.header
-{
+.header {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  padding: 4rem 15%;
-  background-color: rgba(0, 0, 0, 0.3);
+  padding: 1rem 3%;
+  background-color: rgba(178, 213, 241, 0.596);
   backdrop-filter: blur(10px);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
 }
-#menu-icon
-{
+#menu-icon {
   font-size: 3.5rem;
   color: var(--main-color);
   display: none;
 }
-.logo
-{
-  font-size: 4rem;
-  color: var(--text-color);
-  font-weight: 800;
+.logo {
   cursor: pointer;
   transition: 0.3s ease-in-out;
 }
-.logo:hover
-{
+.logo:hover {
   transform: scale(1.1);
 }
-span
-{
-  background: linear-gradient(
-    270deg,
-    #07ac5f 10%,
-    #05adca 100%
-  );
-  background-clip: text;
-  color: transparent;
+.logo img {
+  transition: 0.5s ease all;
+  position: fixed;
 }
-.navbar a
-{
-  font-size: 2.5rem;
+
+.navbar a {
+  font-size: 3rem;
   color: var(--text-color);
   margin-left: 4rem;
   font-weight: 500;
   transition: 0.3s ease-in-out;
   border-bottom: 3px solid transparent;
 }
-.navbar a:hover
-{
+.navbar a:hover {
   color: var(--main-color);
   border-bottom: 3px solid var(--main-color);
 }
