fix: added h2 padding

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,6 +131,7 @@ section {
 .Rules-Content h2 {
   font-size: 5rem;
   text-align: center;
+  padding: 3rem;
 }
 .Rules-List ul {
   list-style: circle;
