--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,7 @@
   --second-bg-color: #f5f5f5;
   --text-color: rgb(0, 0, 0);
   --main-color: rgb(11, 84, 147);
+  --secondary-color: rgba(178, 213, 241, 0.596);
 }
 html {
   font-size: 60%;
@@ -137,4 +138,26 @@ section {
   list-style: circle;
   font-size: 3rem;
   text-align: center;
+}
+
+.footer {
+  background-color: var(--secondary-color);
+  padding: 50px;
+}
+
+.footer ul {
+  text-align: center;
+  font-size: 1.8rem;
+}
+.footer ul li {
+  display: inline-block;
+  margin-left: 20px;
+}
+.footer ul li a {
+  color: white;
+  border-bottom: 3px solid transparent;
+  transition: 0.3s ease-in-out;
+}
+.footer ul li a:hover {
+  border-bottom: 3px solid var(--main-color);
 }
