--- a/CSS/style.css
+++ b/CSS/style.css
@@ -152,25 +152,39 @@ section {
   background-color: var(--bg-color);
 }
 
+/*---Footer-------------------------------------------------------------------*/
 
 .footer {
   background-color: var(--secondary-color);
-  padding: 50px;
+  padding: 2vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column-reverse;
+  bottom: 0px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  backdrop-filter: blur(10px);
 }
 
 .footer ul {
   text-align: center;
-  font-size: 1.8rem;
+  justify-content: space-between;
+  font-size: 2rem;
+  align-items: center;
+  list-style-type: none;
 }
 .footer ul li {
   display: inline-block;
   margin-left: 20px;
+  color: var(--text-color);
 }
 .footer ul li a {
-  color: white;
+  color: var(--text-color);
   border-bottom: 3px solid transparent;
   transition: 0.3s ease-in-out;
 }
 .footer ul li a:hover {
   border-bottom: 3px solid var(--main-color);
+  color: var(--main-color);
 }
