--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,6 +19,7 @@ html {
 body {
   background: var(--bg-color);
   color: var(--text-color);
+  min-height: 100vh;
 }
 /*---Header---------------------------------------------------------------------*/
 
