--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,19 +125,21 @@ section {
 }
 
 .Rules-Content {
-  justify-content: center;
-  align-items: center;
   display: flex;
   flex-direction: column;
 }
 .Rules-Content h2 {
   font-size: 5rem;
-  text-align: center;
-  padding: 3rem;
+  align-items: center;
+  justify-content: center;
+  padding-top: 3rem;
 }
 .Rules-List ul {
   list-style: circle;
   font-size: 3rem;
+  padding: 3rem;
+  list-style-type: disc;
+}
 
 /*---Scrollbar----------------------------------------------------------------*/
 
