--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,8 +124,8 @@ section {
 .Rules-Content-Header p {
   font-size: 4.5rem;
   text-align: center;
+  padding-bottom: 10rem;
 }
-
 .Rules-Content {
   display: flex;
   flex-direction: column;
