--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,6 +120,7 @@ section {
   font-size: 8rem;
   padding: 2rem;
   text-align: center;
+  color: var(--main-color);
 }
 .Rules-Content-Header p {
   font-size: 4.5rem;
@@ -137,6 +138,7 @@ section {
   align-items: center;
   justify-content: center;
   padding-top: 3rem;
+  color: var(--main-color);
 }
 .Rules-List ul {
   list-style: circle;
@@ -144,7 +146,6 @@ section {
   padding: 3rem;
   list-style-type: disc;
 }
-
 /*---Scrollbar----------------------------------------------------------------*/
 
 ::-webkit-scrollbar {
