--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,6 +154,27 @@ section {
   padding: 3rem;
   list-style-type: disc;
 }
+
+/*---Intro----------------------------------------------------------------------*/
+
+.Outro {
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bg-color);
+  min-height: 10vh;
+  border-top: 1rem solid var(--main-color);
+  border-radius: 10rem; 
+}
+.Outro-Content p {
+  font-size: 3rem;
+  text-align: center;
+}
+.Outro-Content h2 {
+  text-align: center;
+  font-size: 4rem;
+  padding: 5rem;
+}
+
 /*---Scrollbar----------------------------------------------------------------*/
 
 ::-webkit-scrollbar {
