--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   text-decoration: none;
   scroll-behavior: smooth;
-  font-family: "Poppins";
+  font-family: "Noto Sans", sans-serif;
 }
 :root {
   --bg-color: rgba(255, 255, 255, 0.973);
@@ -222,4 +222,13 @@ section {
 .footer ul li a:hover {
   border-bottom: 3px solid var(--main-color);
   color: var(--main-color);
+}
+
+/*---Font-------------------------------------------------------------------*/
+.noto-sans{
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
